gitops/apps/landingpage/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: landingpage
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: landingpage
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
