gitops/apps/landingpage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landingpage
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: landingpage.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landingpage
                port:
                  number: 8080
    - host: studionsl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landingpage
                port:
                  number: 8080
    - host: www.studionsl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landingpage
                port:
                  number: 8080
